--- a/spotify/css/custom.css
+++ b/spotify/css/custom.css
@@ -135,11 +135,11 @@ html,body
 
 
 .body {
-  position: absolute;
-  top: 40%;
-  margin-left: -70px;
+  position: fixed;
+  top: 50%;
   left: 50%;
-
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
 }
 .body > span {
   height: 5px;
