Rayal Tree Care Form Submission
Upload base, need to update backend and make sure it accepts form submissions. Cross Origins Error

--- a/css/theme.css
+++ b/css/theme.css
@@ -220,7 +220,7 @@ hr.short-thick {
   position: relative;
   transform: translate3d(0, -50%, 0);
   -webkit-transform: translate3d(0, -50%, 0);
-  top: 50%;
+  top: 55%;
   z-index: 2;
 }
 .align-bottom {
@@ -422,8 +422,9 @@ p.lead {
 }
 @media all and (max-width: 767px) {
   p.lead {
-    font-size: 13px;
+    font-size: 18px;
     line-height: 24px;
+    padding: 0 20px;
   }
   p {
     font-size: 12px;
@@ -724,7 +725,7 @@ footer.bg-dark li,
 /*!---------- 6. BUTTONS ----------*/
 .btn {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  border: 2px solid #47b475;
+  border: 2px solid #fe5900;
   padding: 0 26px;
   height: 40px;
   min-width: 150px;
@@ -785,14 +786,14 @@ footer.bg-dark li,
   min-width: 0;
 }
 .btn-filled {
-  background: #47b475;
+  background: #fe5900;
   color: #fff;
 }
 .btn-white,
 .image-bg .btn,
 .image-bg .btn:visited {
   color: #fff;
-  border-color: #fff;
+  border-color: #fe5900;
 }
 .btn-white:hover,
 .image-bg .btn:hover,
@@ -802,10 +803,10 @@ footer.bg-dark li,
 }
 .image-bg .btn.btn-filled,
 .image-bg .btn-filled:visited {
-  border-color: #47b475;
+  border-color: #fe5900;
 }
 .image-bg .btn-filled:hover {
-  border-color: #fff;
+  border-color: #fe5900;
 }
 .btn-rounded {
   border-radius: 25px;
@@ -830,7 +831,8 @@ body.btn-rounded .btn {
 }
 .btn-white:visited,
 .btn:visited:hover {
-  color: #fff;
+  background: #fff;
+  color: #222;
 }
 .btn-white:visited:hover {
   color: #222;
@@ -897,10 +899,10 @@ nav .btn,
   top: 1px;
 }
 .nav-bar {
-  height: 55px;
-  max-height: 55px;
+  height: 130px;
+  max-height: 130px;
   line-height: 53px;
-  border-bottom: 1px solid #ccc;
+
 }
 .nav-bar .module,
 .nav-bar .module-group {
@@ -908,10 +910,10 @@ nav .btn,
 }
 .nav-bar a {
   display: inline-block;
-  height: 55px;
+  height: 100px;
 }
 .logo {
-  max-height: 60%;
+  max-height: 55px;
 }
 .logo-light {
   display: none;
@@ -988,7 +990,6 @@ nav.bg-dark .logo-dark {
 .menu > li ul {
   width: 200px;
   padding: 8px 0;
-  background: #292929;
   position: absolute;
   z-index: 99;
   opacity: 0;
@@ -1017,10 +1018,12 @@ nav.bg-dark .logo-dark {
   right: 24px;
   content: "\e649";
 }
+
 .menu > li > ul li a {
-  color: #fff;
+  color: #292929;
   height: auto;
   padding: 6px 24px;
+  opacity: 1;
 }
 .menu > li > ul > li > ul {
   left: 100%;
@@ -1207,6 +1210,7 @@ nav .cart-overview a {
 .nav-open {
   max-height: 10000px !important;
   height: auto !important;
+  transition: all .5s ease-in-out;
 }
 .nav-open .mobile-toggle {
   border-bottom: 1px solid #ccc;
@@ -1327,6 +1331,7 @@ nav .cart-overview a {
   }
   .menu {
     height: auto;
+    transition: all .5s ease-in-out;
   }
   .menu.inline-block {
     width: 100%;
@@ -1389,10 +1394,13 @@ nav .cart-overview a {
   .toggle-sub > ul,
   .toggle-sub .mega-menu ul {
     display: block !important;
+    transition: all .5s ease-in-out;
+  }
+  .toggle-sub > ul > li > a{
+    color: #292929;
   }
   .module.widget-handle {
     border-left: none;
-    border-top: 1px solid #ccc;
     line-height: 40px;
     min-height: 40px;
   }
@@ -1434,7 +1442,6 @@ nav .cart-overview a {
     top: 18px;
   }
   .mobile-toggle {
-    border-left: 1px solid #ccc !important;
     border-bottom: none !important;
   }
   .mobile-toggle i {
@@ -1494,23 +1501,58 @@ nav.fixed.scrolled {
   opacity: 1;
 }
 nav.transparent .menu > li > a,
+nav.transparent .menu > li > ul > li >a,
 nav.transparent .module.widget-handle i,
 nav.transparent .nav-utility {
   color: #fff;
+  transition: all .5s ease-in-out;
 }
 nav.transparent .nav-utility,
 nav.transparent .nav-bar {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  transition: all .5s ease-in-out;
 }
 nav.transparent .module.widget-handle {
-  border-left: 1px solid rgba(255, 255, 255, 0.2) !important;
+
 }
 nav.transparent .menu > li > a,
 nav.transparent .module.widget-handle i {
   opacity: 1;
+  transition: all .5s ease-in-out;
+}
+
+
+nav.transparent .menu > li > a::before {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 3px;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background-color: #47b475;
+  transform-origin: right top;
+  transform: scale(0, 1);
+  transition: color 0.1s,transform 0.2s ease-out;
+}
+nav.transparent .menu > li > a:active::before {
+  background-color: #47b475;
+}
+nav.transparent .menu > li > a:hover::before, a:focus::before {
+  transform-origin: left top;
+  transform: scale(1, 1);
+}
+
+nav.transparent .menu > li > a:hover, a:focus, a:active {
+  color: #47b475;
+  text-decoration: none;
+}
+nav.transparent .menu > li > a:hover{
+  transform-origin: left top;
+  transform: scale(1, 1);
 }
 nav.transparent .has-dropdown:after {
   color: #fff;
+  transition: all .5s ease-in-out;
 }
 nav.transparent .logo-dark {
   display: none;
@@ -1531,9 +1573,11 @@ nav.transparent {
     background: #fff;
   }
   nav.transparent .nav-open .menu > li > a,
+  nav.transparent .nav-open .menu > li > ul > li > a,
   nav.transparent .nav-open .module.widget-handle i,
   nav.transparent .nav-open .nav-utility {
     color: #292929;
+    transition: all .5s ease-in-out;
   }
   nav.transparent .nav-open .logo-dark {
     display: inline;
@@ -1549,17 +1593,17 @@ nav.transparent {
   }
 }
 nav.transparent.fixed {
-  background: #fff;
+  background: #292929;
 }
 nav.transparent.fixed .logo-light {
-  display: none;
+  display: inline;
 }
 nav.transparent.fixed .logo-dark {
-  display: inline;
+  display: none;
 }
 nav.transparent.fixed .menu > li > a,
 nav.transparent.fixed .module.widget-handle i {
-  color: #292929;
+  color: #ffffff;
 }
 nav.transparent.fixed .menu > .has-dropdown:after {
   color: #fff;
@@ -1722,14 +1766,16 @@ input[type="password"] {
   cursor: default;
 }
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"],
+input[type="select"],
+input[type="number"] {
   background: #f5f5f5;
   border: none;
-  width: 100%;
+  width: 80%;
   height: 50px;
-  padding-left: 20px;
+  padding: 10px;
   font-weight: 500;
-  margin-bottom: 24px;
   border-radius: 0;
 }
 .image-bg input[type="text"],
@@ -1747,7 +1793,8 @@ button.transparent {
   color: #fff !important	;
 }
 input[type="text"]:focus,
-input[type="password"]:focus {
+input[type="password"]:focus,
+input[type="email"]:focus  {
   outline: 1px solid #ccc;
 }
 textarea {
@@ -1809,10 +1856,11 @@ input[type="submit"],
 button[type="submit"] {
   height: 50px;
   line-height: 48px;
-  border: 2px solid #47b475;
-  background: #47b475;
+  border: 2px solid #fe5900;
+  background: #fe5900;
   color: #fff;
-  width: 100%;
+  margin: 15px;
+  width: 50%;
   font-size: 11px;
   text-transform: uppercase;
   font-weight: bold;
@@ -1842,6 +1890,10 @@ button[type="submit"].hollow:hover {
   background: #47b475;
   color: #fff;
 }
+button[type="submit"]:disabled {
+  opacity: .5;
+}
+
 .select-option {
   position: relative;
   cursor: pointer;
@@ -1870,11 +1922,11 @@ button[type="submit"].hollow:hover {
 select {
   height: 50px;
   background: #f5f5f5;
-  width: 100%;
+  width: 80%;
   border-radius: 0;
   border: none;
   outline: none;
-  padding-left: 20px;
+  padding: 10px;
   position: relative;
   font-size: 11px;
   text-transform: uppercase;
@@ -1885,6 +1937,7 @@ select {
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   cursor: pointer;
+  -webkit-appearance: menulist;
 }
 select:focus {
   background: #eee;
@@ -1995,7 +2048,7 @@ form.thirds button {
 }
 form.halves input,
 form.halves button {
-  width: 46%;
+  width: 30%;
   float: left;
   margin-left: 2.5%;
   margin-bottom: 16px;
@@ -3679,11 +3732,19 @@ img {
     bottom: 0;
   }
   .cover.fullscreen {
-    height: auto;
-    padding: 80px 0;
+    height: 120vh;
   }
   .cover.fullscreen.image-slider {
     padding: 0;
+  }
+  .cover.fullscreen .container.v-align-transform{
+
+      position: relative;
+      transform: translate3d(0, -50%, 0);
+      -webkit-transform: translate3d(0, -50%, 0);
+      top: 55%;
+      z-index: 2;
+
   }
   .cover.fullscreen .container {
     top: 0;
