--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2507,7 +2507,7 @@ legend {
   border-bottom: 1px solid #e5e5e5;
 }
 label {
-  display: inline-block;
+  display: block;
   max-width: 100%;
   margin-bottom: 5px;
   font-weight: bold;
@@ -2522,6 +2522,7 @@ input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
   line-height: normal;
+  display: inline;
 }
 input[type="file"] {
   display: block;
@@ -2678,6 +2679,7 @@ input[type="checkbox"].disabled,
 fieldset[disabled] input[type="radio"],
 fieldset[disabled] input[type="checkbox"] {
   cursor: not-allowed;
+  
 }
 .radio-inline.disabled,
 .checkbox-inline.disabled,
@@ -5946,7 +5948,7 @@ button.close {
 .modal-dialog {
   position: relative;
   width: auto;
-  margin: 10px;
+  margin: 30px;
 }
 .modal-content {
   position: relative;
@@ -5980,7 +5982,6 @@ button.close {
 .modal-header {
   min-height: 16.42857143px;
   padding: 15px;
-  border-bottom: 1px solid #e5e5e5;
 }
 .modal-header .close {
   margin-top: -2px;
@@ -5996,7 +5997,6 @@ button.close {
 .modal-footer {
   padding: 15px;
   text-align: right;
-  border-top: 1px solid #e5e5e5;
 }
 .modal-footer .btn + .btn {
   margin-bottom: 0;
@@ -6017,7 +6017,7 @@ button.close {
 }
 @media (min-width: 768px) {
   .modal-dialog {
-    width: 600px;
+    width: 350px;
     margin: 30px auto;
   }
   .modal-content {
